kubernetes/config/kube/productionconfigs/fleet-mgmt-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fleet-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-management
  template:
    metadata:
      labels:
        app: fleet-management
    spec:
      containers:
      - name: persephone-metadata
        image: vmware-docker-blockchainsaas.bintray.io/persephone-metadata:latest
        ports:
        - containerPort: 9001
        imagePullPolicy: Always
      - name: persephone-provisioning
        image: vmware-docker-blockchainsaas.bintray.io/persephone-provisioning:latest
        ports:
        - containerPort: 9002
        imagePullPolicy: Always
        volumeMounts:
        - name: metadata-volume
          mountPath: /config/persephone/provision-service/
          readOnly: true
      imagePullSecrets:
        - name: bintray
      volumes:
      - name: metadata-volume
        configMap:
          name: fleetmap
          defaultMode: 0700
