kubernetes/config/kube/productionconfigs/saas-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vmbc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vmbc
  template:
    metadata:
      labels:
        app: vmbc
    spec:
      imagePullSecrets:
        - name: bintray
      hostname: helen
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "db-server"
        - "helen"
        - "contract-compiler"
        - "deploymentservice"
      containers:
      - name: cockroachdb
        image: cockroachdb/cockroach:v2.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 26257
        command:
        - /opt/vmbc/helen/entrypoint.sh
        volumeMounts:
        - name: helenmap-volume
          mountPath: /opt/vmbc/helen/
          readOnly: true
      - name: contract-compiler
        image: vmware-docker-blockchainsaas.bintray.io/contract-compiler:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      - name: helen
        image: vmware-docker-blockchainsaas.bintray.io/helen:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: ui
        image: vmware-docker-blockchainsaas.bintray.io/ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      - name: fleet-management
        image: vmware-docker-blockchainsaas.bintray.io/persephone-provisioning:latest
        ports:
        - containerPort: 9002
        imagePullPolicy: Always
        volumeMounts:
        - name: fleet-volume
          mountPath: /config/persephone/provision-service/
          readOnly: true
      volumes:
      - name: helenmap-volume
        configMap:
          name: helenmap
          defaultMode: 0700
      - name: fleet-volume
        configMap:
          name: fleetmap
          defaultMode: 0700
