kubernetes/config/kube/productionconfigs/fleet-mgmt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-management
  labels:
    app: fleet-management
spec:
  ports:
  - port: 9001
    targetPort: 9001
    name: metadata
  - port: 9002
    targetPort: 9002
    name: provision
  selector:
    app: fleet-management
