kubernetes/config/kube/productionconfigs/helen-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helen-stage
  labels:
    app: helen-stage
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: helen-stage
