kubernetes/config/kube/productionconfigs/saas-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmbc
  labels:
    app: vmbc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vmbc
